Search API 1.x, dev (xxxx-xx-xx):
---------------------------------
- #2889989 by kevineinarsson, drunken monkey, kristofferwiklund: Fixed
  highlighting for text with multi-byte characters.
- #1393064 by xlyz, drunken monkey, jannis: Fixed handling of empty facet
  filters.
- #2927692 by drunken monkey, Kristi Wachter: Fixed exposed grouped Views
  options filters.
- #2928769 by jannis, drunken monkey: Fixed Views cache not being cleared when
  enabling indexes.
- #2566529 by Dylan Donkersgoed, drunken monkey, joachim, swirt: Added support
  for the "Content access" processor for "Multiple types" indexes.
- #2905445 by ciss, drunken monkey: Fixed error handling in Views term filter
  handler.
- #2904268 by pobster, drunken monkey: Added support for language hierarchy in
  Views.

Search API 1.22 (2017-07-18):
-----------------------------
- #1710212 by drunken monkey: Added a data alteration for indexing a user's
  content.
- #2879892 by blacklabel_tom, drunken monkey: Fixed link in description of
  "Stemmer" processor.
- #2788593 by drunken monkey: Fixed error in Views query settings for specific
  setups.
- #2749963 by drunken monkey: Fixed "Index hierarchy" not having values
  numerically indexed.
- #2875793 by drunken monkey: Fixed buggy error handling in Views.
- #2860624 by drunken monkey: Fixed problem with empty words in Views fulltext
  filter.
- #2855447 by mparker17, drunken monkey: Added "Separator" option for
  aggregated fields of type "Fulltext".
- #2863445 by dbjpanda, drunken monkey: Fixed phrasing in README.txt.

Search API 1.21 (2017-02-23):
-----------------------------
- #2780341 by Berdir: Fixed passing of custom ranges to date facets.
- #2765317 by JorgenSandstrom, NWOM, drunken monkey: Added a "Last" aggregation
  type.
- #2842856 by drunken monkey: Fixed language filters for "Multiple types"
  indexes.
- #2844990 by drunken monkey: Made the "Role filter" data alteration available
  for multi-type indexes.